app/styles/app.css
/*** TYPO ***/
a, .red { color: #cc0000;
		  text-decoration: none; }
a { transition: text-decoration 0.2s; }
.pink { color: #FF69B4; }

nav a { margin: 0 1em;
		width: 4rem;
		color: #FFF;
		padding: .5rem 0;
		text-align: center; }
@media (max-width: 550px) {
	nav a { margin: .5rem; }
}
a .card { color: #222; }
a .card .active { font-weight: 400; }
.active { font-weight: 700; }
.rightAligned { float: right; }

/*** HEADER ***/
header, footer {
	padding: 1rem;
	background-color: #352525;
	color: #fff;
}
header { height: 5rem; }
@media (max-width: 550px) {
	header { height: 17rem; }
}

header nav a:hover { text-decoration: none; }
header nav a::after {
	position: relative;
	display: block;
	top: 1.25rem;
	height: 0.5rem;
	background: #cc0000;
	content: '';
	opacity: 0;
	transition: opacity 0.3s, transform 0.3s;
	transform: translateY(5px);
}
header nav a:hover::after,
header nav a.active::after {
	opacity: 1;
	transform: translateY(0px);
}

/*** fixing stupid alignments - might need to think of something better ***/
header .column:first-child { margin-right: 0; }
#dashboard .column:first-child { margin-right: 0; }

nav { padding: 1rem 0;
	  height: 2rem; }

/*** CONTENT AREA ***/

.content {  margin-top: 3rem;
			margin-bottom: 3rem; }
section { padding-top: 0.3rem; }

.card { border-radius: 2px;
		border: 1px solid #D1D1D1;
		padding: 1rem;
		margin-bottom: 1rem;
		min-height: 14rem;
		transition: border 0.25s; }
.card:hover { border: 1px solid #cc0000; }
.card .card-prominent {
	font-size: 1.6rem;
	font-weight: 700;
	text-align: center;
	}
.card .card-prominent::after {
	content: '';
	width: 30%;
	left: 35%;
	height: 1px;
	position: relative;
	display: block;
	top: 1rem;
	background: #D1D1D1;
	transition: background 0.25s, width 0.25s, left 0.2s; }
.card:hover .card-prominent::after {
	background: #cc0000;
	width: 50%;
	left: 25%; }
.card .card-project {
	width: 100%;
	text-align: center;
	display: block;
	margin-bottom: 2rem;
}
.card .card-ticket { float: left; }
.card .card-updated { float: right; }

/*** FOOTER ***/

footer img#logo {
	max-height: 4.5rem;
	max-width: 4.5rem;
	display: block;
    margin-left: auto;
    margin-right: auto;
}

/*** Custom Styles ***/
.note {
	background-color: #ffffcc;
	border: 1px solid #f9d100;
}

